package BusinessLayer;

public enum DLicense {
    B,C,C1,C_E;
}
