package groupk.logistics.business;

public enum Area {
    south,north,center;

    public static Area castStringToArea(String area) throws Exception {
        if(area.equals("center")) return Area.center;
        else if(area.equals("north")) return Area.north;
        else  if(area.equals("south")) return Area.south;
        else throw new IllegalArgumentException(area + " is invalid area");
    }
}
