package groupk.shared.service.dto;

public class Product {
    public int id;
    public int count;

    public Product(int id, int count) {
        this.id = id;
        this.count = count;
    }
}
